tests/NormalTests/paczka1/small_fuzzy/30996665.err
Error in line 3: pd6Du A749 15,2
Error in line 5: pd6Du A915 72,1
Error in line 4: AuHKpofW34e S800 65,0
